--- a/app/src/main/res/layout/activity_syllabus_display.xml
+++ b/app/src/main/res/layout/activity_syllabus_display.xml
@@ -23,9 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
-
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+        android:textColor="@color/blabla"
         android:layout_below="@id/toolbar"
         android:id="@+id/syllabus_data"/>
     </ScrollView>
