--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,9 +1,30 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_margin="10dp"
     android:layout_height="match_parent"
     tools:context="com.uvce.univis.Activities.InfoFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello fellow UVCEian!"
+        android:textAlignment="center"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:id="@+id/about_text"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:textColorLink="@color/colorPrimary"
+        android:autoLink="all"
+        android:text="To change the course or semester, click on the setting-ish icon on the top right.You can find the electives like kannada,english etc., under the name OTH\nIf you have any issues regarding the app, contact \n
+deepakchethan@outlook.com \t\t For Syllabus part\nsagar_mail_insert@here.com \t\t For question paper part\n
+If you want to take things to your own hands, you can find the source code at \n
+https://www.github.com/DeepakChethan/Univis\n\nIssue a pull request or just clone and make your own version or whatever.\n\nThanks for using univis!"/>
 
 
 </FrameLayout>
