--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#cc1121</color>
     <color name="colorPrimaryDark">#cc1121</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="blabla">#000000</color>
 </resources>
+
