--- a/app/src/main/res/layout/fragment_qpaper.xml
+++ b/app/src/main/res/layout/fragment_qpaper.xml
@@ -2,8 +2,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:grid="http://schemas.android.com/apk/res-auto"
     tools:context="com.uvce.univis.Activities.QPaperFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            grid:alignmentMode="alignMargins"
+            grid:columnCount="2"
+            android:id="@+id/gridLayout"
+            grid:columnOrderPreserved="false"
+            android:padding="10dp"
+            >
+
+        </android.support.v7.widget.GridLayout>
+    </ScrollView>
 
 
 </FrameLayout>
